--- a/index.html
+++ b/index.html
@@ -5,18 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+        <meta charset="UTF-8">
         <script src="script.js"></script>
     </head>
     <body>
         <div class="nav">
             <a href="index.html" id="title" class="card title">
-                    <div class="container">
-                        Jack's Blog
-                    </div>
-            </a>
-            <a href="javascript:toggleNavs()" id="mobile_button" class="card mobile_button">
                 <div class="container">
-                    +
+                    👋 Jack's Blog
                 </div>
             </a>
             <a href="about.html" id="about" class="card about">
