--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="nav">
             <a href="index.html" id="title" class="card title">
                 <div class="container">
-                    👋 Jack's Blog
+                    &1F44B; Jack's Blog
                 </div>
             </a>
             <a href="about.html" id="about" class="card about">
