--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
+
+        <link rel="stylesheet" href="css/card.css">
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/nav.css">
+        <link rel="stylesheet" href="css/blogs.css">
+
         <script src="script.js"></script>
     </head>
     <body>
@@ -25,8 +30,7 @@
                     Contact
                 </div>
             </a>
-        </div>
-
+       </div>
         <div class="blogs">
             <div class="card">
                 <div class="container">
